# ros_braccio_arm

./: CMakeLists.txt  CMakeLists.txt1  README.md  package.xml  package.xml1
launch/: arm_launch  arm_launch.xml
rviz/: arm_rviz.rviz
scripts/: arm_control_node.py  joint_state_client_with_button.py  joint_state_server.py
srv/: joint_state_service.srv
urdf/: braccio.urdf  robot1.xacro
